# n7tya-lang

./: .gitignore  AGENT.md  LICENSE  README.md
.github/workflows/: ci.yml
doc/: adoption.md  guide.md  language_reference.md  philosophy.md  specification.md
n7tya/: Cargo.toml
n7tya/examples/: control.n7t  features_test.n7t  full_stack_test.n7t  hello.n7t  import_test.n7t  lib_module.n7t  sample.n7t  stdlib_test.n7t  structure.n7t  types.n7t
n7tya/src/: ast.rs  builtins.rs  errors.rs  interpreter.rs  jsx_render.rs  lexer.rs  main.rs  parser.rs  python.rs  typechecker.rs
