[package]
name = "n7tya"
version = "0.1.2"
edition = "2021"
description = "n7tya-lang - A full-stack web programming language"
license = "MIT"

[dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
logos = "0.15"
pyo3 = { version = "0.23", features = ["auto-initialize"] }

[[bin]]
name = "n7tya"
path = "src/main.rs"
