[package]
name = "n7tya"
version = "0.2.0"
edition = "2021"
description = "n7tya-lang - A full-stack web programming language"
license = "MIT"

[dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
logos = "0.15"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
serde_json = "1"
ureq = "2"

[[bin]]
name = "n7tya"
path = "src/main.rs"
